--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   "author": "AsGoshawk",
   "license": "ISC",
   "dependencies": {
+    "apicache": "^1.6.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-rate-limit": "^6.5.1",
     "needle": "^3.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
